tests/snapshots/integration__integration_tests__remove__pre_remove_hook_skipped_with_no_verify.snap
---
source: tests/integration_tests/remove.rs
info:
  program: wt
  args:
    - remove
    - "--no-background"
    - "--no-verify"
    - feature-skip
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mRemoving worktree for [1mfeature-skip[22m...[39m
✅ [32mRemoved [1mfeature-skip[22m worktree & branch (same commit as main)[39m
